# sVanillaPlugins

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci-clang-format-check.yml  ci-linux.yml  ci-macos.yml  ci-win.yml
BiliBiliPlugin/: CMakeLists.txt
BiliBiliPlugin/src/: TemplatePluginCall.cpp
BiliBiliPlugin/src/BiliApi/: BiliApi.h  BiliApiConstants.h  BilibiliClient.cpp  BilibiliClient.h  BilibiliLog.h  BilibiliUrl.cpp  BilibiliUrl.h  BilibiliUtils.cpp  BilibiliUtils.h
BiliBiliPlugin/src/Plugin/: BiliBiliDownloader.cpp  BiliBiliDownloader.h  BiliBiliLogin.cpp  BiliBiliLogin.h  BiliBiliPlugin.cpp  BiliBiliPlugin.h  BiliBiliResource.h  BilibiliPluginMessage.h  Convert.cpp  Convert.h  QrCodeGenerator.cpp  Qrcodegen.cpp
BiliBiliPlugin/test/: CMakeLists.txt  test.cpp
BiliBiliPlugin/test/plugin/: business_flow_cases.json  test_plugin.cpp
BiliBiliPlugin/test/unit/: unit_test.cpp
DedaoPlugin/: CMakeLists.txt
DedaoPlugin/src/: TemplatePluginCall.cpp
DedaoPlugin/src/DedaoApi/: DedaoApi.h  DedaoApiConstants.h  DedaoClient.cpp  DedaoClient.h  DedaoLog.h  DedaoUrl.cpp  DedaoUrl.h  DedaoUtils.cpp  DedaoUtils.h
DedaoPlugin/src/Plugin/: Convert.cpp  Convert.h  DedaoDownloader.cpp  DedaoDownloader.h  DedaoLogin.cpp  DedaoLogin.h  DedaoPlugin.cpp  DedaoPlugin.h  DedaoPluginMessage.h  DedaoResource.h
DedaoPlugin/test/: CMakeLists.txt
DedaoPlugin/test/plugin/: test_plugin.cpp
DedaoPlugin/test/unit/: unit_test.cpp
DouYinPlugin/: CMakeLists.txt
DouYinPlugin/src/: TemplatePluginCall.cpp
DouYinPlugin/src/DouYinApi/: DouYinApi.h  DouYinClient.cpp  DouYinClient.h  DouYinConstants.h  DouYinLog.h  DouYinUrl.cpp  DouYinUrl.h  DouYinUtils.cpp  DouYinUtils.h
DouYinPlugin/src/Plugin/: Convert.cpp  Convert.h  DouYinDownloader.cpp  DouYinDownloader.h  DouYinLogin.cpp  DouYinLogin.h  DouYinPlugin.cpp  DouYinPlugin.h  DouYinPluginMessage.h  DouYinResource.h
DouYinPlugin/test/: CMakeLists.txt  test.cpp
DouYinPlugin/test/plugin/: test_plugin.cpp
DouYinPlugin/test/unit/: unit_test.cpp
HLSPlugin/: CMakeLists.txt
HLSPlugin/src/: TemplatePluginCall.cpp
HLSPlugin/src/HLSApi/: HLSApi.cpp  HLSApi.h  HLSClient.cpp  HLSClient.h  HLSConstants.h  HLSLog.h  HLSParser.cpp  HLSParser.h  HLSPlaylistDownloader.cpp  HLSPlaylistDownloader.h
HLSPlugin/src/Plugin/: Convert.cpp  Convert.h  HLSDownloader.cpp  HLSDownloader.h  HLSLogin.cpp  HLSLogin.h  HLSPlugin.cpp  HLSPlugin.h  HLSPluginMessage.h  HLSResource.h
HLSPlugin/test/: CMakeLists.txt  test.cpp
HLSPlugin/test/plugin/: test_plugin.cpp
HLSPlugin/test/unit/: unit_test.cpp
NeteaseCloudMusicPlugin/: CMakeLists.txt
NeteaseCloudMusicPlugin/src/: TemplatePluginCall.cpp
NeteaseCloudMusicPlugin/src/NeteaseCloudMusicApi/: DeviceIDData.cpp  DeviceIDData.h  NeteaseCloudMusicApi.h  NeteaseCloudMusicClient.cpp  NeteaseCloudMusicClient.h  NeteaseCloudMusicConstants.h  NeteaseCloudMusicLog.h  NeteaseCloudMusicUrl.cpp  NeteaseCloudMusicUrl.h  NeteaseCloudMusicUtils.cpp  NeteaseCloudMusicUtils.h
NeteaseCloudMusicPlugin/src/Plugin/: Convert.cpp  Convert.h  NeteaseCloudMusicDownloader.cpp  NeteaseCloudMusicDownloader.h  NeteaseCloudMusicLogin.cpp  NeteaseCloudMusicLogin.h  NeteaseCloudMusicPlugin.cpp  NeteaseCloudMusicPlugin.h  NeteaseCloudMusicPluginMessage.h  NeteaseCloudMusicResource.h  QrCodeGenerator.cpp  QrCodeGenerator.h
NeteaseCloudMusicPlugin/test/: CMakeLists.txt  test.cpp
NeteaseCloudMusicPlugin/test/plugin/: test_plugin.cpp
NeteaseCloudMusicPlugin/test/unit/: unit_test.cpp
TemplatePlugin/: CMakeLists.txt
TemplatePlugin/include/: IPlugin.h
TemplatePlugin/src/: TemplatePlugin.cpp  TemplatePlugin.h  TemplatePluginCall.cpp  TemplatePluginCall.h
TemplatePlugin/test/: CMakeLists.txt  test.cpp
WeiboPlugin/: CMakeLists.txt
WeiboPlugin/src/: TemplatePluginCall.cpp
WeiboPlugin/src/Plugin/: Convert.cpp  Convert.h  WeiboDownloader.cpp  WeiboDownloader.h  WeiboLogin.cpp  WeiboLogin.h  WeiboPlugin.cpp  WeiboPlugin.h  WeiboPluginMessage.h  WeiboResource.h
WeiboPlugin/src/WeiboApi/: WeiboApi.h  WeiboApiConstants.h  WeiboClient.cpp  WeiboClient.h  WeiboLog.h  WeiboUrl.cpp  WeiboUtils.cpp  WeiboUtils.h
WeiboPlugin/test/: CMakeLists.txt  test.cpp
WeiboPlugin/test/plugin/: test_plugin.cpp
WeiboPlugin/test/unit/: unit_test.cpp
XHSPlugin/: CMakeLists.txt
XHSPlugin/src/: TemplatePluginCall.cpp
XHSPlugin/src/Plugin/: Convert.cpp  Convert.h  (+9 more)
XHSPlugin/test/: CMakeLists.txt  test.cpp
XHSPlugin/test/plugin/: test_plugin.cpp
XHSPlugin/test/unit/: unit_test.cpp
YoutubePlugin/: CMakeLists.txt
YoutubePlugin/src/: TemplatePluginCall.cpp
YoutubePlugin/test/: CMakeLists.txt  test.cpp
YoutubePlugin/test/plugin/: test_plugin.cpp
YoutubePlugin/test/unit/: unit_test.cpp
doc/: manual.md  readme.md
doc/develop/: build-and-test.md  plugin-api.md  plugin-development.md  readme.md  supported-urls.md
harness/: README.md
harness/ai-experience/: README.md  current-lessons.md
harness/knowledge/: README.md  plugin-inventory.md  project-overview.md
harness/requirements/: README.md  current-repository-requirements.md
harness/specs/: README.md  agent-local-cleanup.md  bilibili-test-external-tools.md  douyin-basic-correctness.md  plugin-architecture.md  plugin-cmake-style.md  plugin-test-layout.md  plugincrypto-openssl3-api.md  prioritize-source-video-in-collections.md  root-ctest-discovery.md  sdd-and-harness-contract.md  xhs-test-strategy.md
harness/standards/: README.md  engineering-standards.md  git.md  self-test.md
harness/workflow/: README.md  sdd-harness-workflow.md  verification-matrix.md
include/: IPlugin.h
scripts/: clang_format_all.py  harness.py
src/: .clang-format  CMakeLists.txt
src/BilibiliPlugin/: CMakeLists.txt
src/BilibiliPlugin/src/: BilibiliPlugin.cpp  BilibiliPlugin.h  BilibiliPluginCall.cpp  BilibiliPluginCall.h
src/YoutubePlugin/: CMakeLists.txt
src/YoutubePlugin/src/: YoutubePlugin.cpp  YoutubePlugin.h  YoutubePluginCall.cpp  YoutubePluginCall.h
src/YoutubePlugin/test/: CMakeLists.txt  YoutubePluginTest.cpp
test/: testUtils.cmake
(+37 files in other folders)
